Replace util-mmap with memory segment from JEP 424